tdf#107240 tdf#120432 Disable time/date entries in read-only/protected mode

Change-Id: Ia3c757fa094f17be3b4aadaee65c4699bf0c1cb1
Reviewed-on: https://gerrit.libreoffice.org/61953
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>